# ZitaREV1VST3

./: .gitignore  CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
